# neural-network

./: .gitignore  CMakeLists.txt
appl/: CMakeLists.txt  nn.cpp
lib/: CMakeLists.txt  libNeuralNet.cpp  libNeuralNet.h
nn-model/: CMakeLists.txt  nnLayer.cpp  nnLayer.hpp  nn_activation.cpp  nn_activation.hpp  nn_layer.cpp  nn_layer.hpp
tests/: CMakeLists.txt  test_activation.cpp
